# overmind-scheduler-framework

./: .gitignore  README.md  pyproject.toml
.claude/skills/scheduler-authoring/: SKILL.md
src/indie_scheduler/: __init__.py  helpers.py  serve.py  tracker.py
src/indie_scheduler/app/: config.py  db.py  helpers.py  main.py  notifier.py  registry.py  runner.py
src/indie_scheduler/app/static/: style.css
src/indie_scheduler/app/templates/: base.html  index.html  job_detail.html  job_source.html  run_detail.html
tracker/typescript/: README.md  index.ts  package.json  tsconfig.json
